--- a/src/css/main.css
+++ b/src/css/main.css
@@ -17,7 +17,6 @@
     bottom: 10px;
     right: 10px;
     z-index: 1;
-    display: none;
 }
 
 #clear{
@@ -28,7 +27,6 @@
 
 #create-floor{
     position: absolute;
-    top: 10px;
+    bottom: 10px;
     left: calc(50% - 46px);
-    display: none;
 }
